Fix textarea not wrapping on Firefox
Issue #8

--- a/src/style.css
+++ b/src/style.css
@@ -272,7 +272,7 @@ textarea{
   border: none;
   border-radius: 0;
   outline: none;
-  white-space: nowrap;
+  white-space: pre-wrap;
   z-index: 1;
 }
 
